[tool.poetry]
name = "ab"
version = "0.1.0"
description = ""
authors = ["Danis <bzakks21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
jupyter = "^1.0.0"
rectools = "^0.4.2"
tqdm = "^4.66.1"
numpy = "^1.26.2"
plotly = "^5.18.0"
setuptools = "^69.0.2"
scipy = "^1.11.4"
ruff = "^0.1.6"
seaborn = "^0.13.0"
pyyaml = "6.0"
tweedie = "^0.0.9"
ray = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

